Style link class, fix permissions alignment and add progress bar animation

--- a/scss/backend/_base.scss
+++ b/scss/backend/_base.scss
@@ -58,6 +58,15 @@ a {
   }
 }
 
+.link {
+  color: $brand-primary !important;
+  text-decoration: underline !important;
+
+  &:hover {
+    text-decoration: none !important;
+  }
+}
+
 em {
   font-style: italic;
 }
