--- a/scss/backend/dot-admin/_dot-admin.scss
+++ b/scss/backend/dot-admin/_dot-admin.scss
@@ -806,8 +806,7 @@ tr.pop_divider {
   display: inline-block;
   vertical-align: top;
 }
-#menu ul.dropdown li.dotCMS_forms a span,
-.formIcon {
+#menu ul.dropdown li.dotCMS_forms a span {
   background: url($dotcms-sprite) no-repeat -21px -1320px;
   width: 18px;
   height: 18px;
