--- a/scss/backend/dot-admin/_icons.scss
+++ b/scss/backend/dot-admin/_icons.scss
@@ -62,7 +62,6 @@
 .folderGlobe,
 .folderOpen,
 .folderSelected,
-.form,
 .formNew,
 .gearMinus,
 .gearPencil,
@@ -218,7 +217,7 @@ $icons: (
   folderGlobe: $fa-var-square,
   folderOpen: $fa-var-folder-open,
   folderSelected: $fa-var-folder-open,
-  form: $fa-var-square,
+  form: $fa-var-list,
   formNew: $fa-var-square,
   gear: $fa-var-gear,
   gearMinus: $fa-var-square,
