--- a/scss/dijit/_progressBar.scss
+++ b/scss/dijit/_progressBar.scss
@@ -24,3 +24,9 @@
     height: 100%;
   }
 }
+
+
+
+.dijitProgressBarIndeterminate .dijitProgressBarTile {
+  background-image: url("/html/js/dojo/release/dojo/dijit/themes/dmundra/images/progressBarAnim.gif");
+}
