--- a/scss/dijit/layout/_tabContainer.scss
+++ b/scss/dijit/layout/_tabContainer.scss
@@ -26,6 +26,7 @@
     &PaneWrapper {
       .dijitContentPane {
         padding: $tab-padding;
+        overflow: visible;
       }
     }
 
